@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.7556 2004/10/25 09:05:27 xtraeme Exp $
+$NetBSD: CHANGES,v 1.7557 2004/10/25 09:37:44 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -4853,3 +4853,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Removed streamtuner-live365 [xtraeme 2004-10-25]
 	Removed streamtuner-local [xtraeme 2004-10-25]
 	Updated streamtuner to 0.99 [xtraeme 2004-10-25]
+	Updated bitlbee to 0.91 [xtraeme 2004-10-25]
